# meridian

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  description.txt  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 001_create_research_jobs.py
app/: config.py  logging_config.py  main.py  url_utils.py  worker.py
app/agents/: base.py  critic.py  extractor.py  planner.py  researcher.py  synthesizer.py
app/api/: deps.py  health.py  research.py
app/db/: redis_client.py  session.py
app/models/: db.py  schemas.py
app/pipeline/: orchestrator.py
app/services/: embeddings.py  events.py  llm.py  query_intent.py
app/services/search/: __init__.py  arxiv.py  duckduckgo.py  enrich.py  filters.py  query_builder.py  wikipedia.py
app/static/: index.html
docs/: DEPLOY.md
scripts/: start.sh  validate_env.py
tests/: test_api.py  test_extractor.py  test_pipeline.py  test_search.py  test_url_utils.py
